tests/ui/coherence/coherence-no-direct-lifetime-dispatch.stderr
error[E0119]: conflicting implementations of trait `MyTrait`
  --> $DIR/coherence-no-direct-lifetime-dispatch.rs:6:1
   |
LL | impl<T> MyTrait for T {}
   | --------------------- first implementation here
LL | impl<T: 'static> MyTrait for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
